--- a/Comparish/Comparish.nuspec
+++ b/Comparish/Comparish.nuspec
@@ -2,9 +2,10 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>$version$</version>
+    <version>1.0.1</version>
     <title>$title$</title>
     <authors>Sidney Akers</authors>
+    <repository type="git" url="https://github.com/SidneyAks/Comparish" />
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
     <description>A utility for comparing objects by specific fields</description>
